correction mobile view

--- a/assets/scss/MyLayout.scss
+++ b/assets/scss/MyLayout.scss
@@ -16,7 +16,7 @@
       flex-direction: column;
       margin: 20px;
 
-      .box {
+      
          // color: red;
          padding-top: 380px;
          padding-bottom: 10px;
@@ -27,7 +27,7 @@
           @include xl {
             //  color: orange;
           }
-      }
+      
   
       
         
